[workspace]
members = ["robotech", "robotech-macros"]
resolver = "3"


[workspace.dependencies]
# rototech依赖
log = "0.4.29"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-core = "0.1.36"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.23"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
thiserror = "2.0.18"
chrono = "0.4.44"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.18.0"
tokio = "1.51.1"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
anyhow = "1.0.102"
config = "0.15.22"
regex = "1.12.3"
nix = "0.31.2"
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
tokio-rustls = "0.26.4"
hyper = "1.9.0"
hyper-util = "0.1.20"
rustls = "0.23.37"
rustls-pemfile = "2.2.0" # 用于读取 pem 证书文件
socket2 = "0.6.3"
sqlx = "0.9.0-alpha.1"
sea-orm = "2.0.0-rc.37"
once_cell = "1.21.4"
validator = "0.20.0"
reqwest = "0.13.2"
ipnet = "2.12.0"

idworker = "1.1.0"
wheel-rs = "1.4.0"

# macro依赖
proc-macro2 = "1.0.106"             # 提供与标准库 proc_macro 兼容但更易测试的接口
quote = "1.0.45"                    # 用于将语法树转换回代码
syn = "2.0.117"                     # 用于解析 Rust 代码为语法树（AST）

[patch.crates-io]
idworker = { path = "../idworker" }
wheel-rs = { path = "../wheel-rs" }
