[workspace]
members = ["robotech-macros", "robotech"]
resolver = "3"

[workspace.dependencies]
# rototech依赖
log = "0.4.33"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-core = "0.1.36"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
thiserror = "2.0.18"
chrono = "0.4.45"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
serde = "1.0.228"
serde_json = "1.0.150"
serde_with = "3.21.0"
tokio = "1.52.3"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
anyhow = "1.0.103"
config = "0.15.24"
linkme = "0.3.36"
regex = "1.12.4"
nix = "0.31.3"
axum = "0.8.9"
tower = "0.5.3"
tower-http = "0.7.0"
tokio-rustls = "0.26.4"
hyper = "1.10.1"
hyper-util = "0.1.20"
rustls = "0.23.40"
rustls-pemfile = "2.2.0" # 用于读取 pem 证书文件
socket2 = "0.6.4"
sqlx = "0.9.0"
sea-orm = "2.0.0-rc.41"
once_cell = "1.21.4"
validator = "0.20.0"
reqwest = "0.13.4"
http = "1.4.2"
ipnet = "2.12.0"
bytes = "1.12.0"
rumqttc = "0.25.1"
influxdb2 = "0.5.2"
jsonwebtoken = "10.4.0"

idworker = "1.1.0"
wheel-rs = "1.8.0"
robotech-macros = "1.7.3"

# macro依赖
proc-macro2 = "1.0.106"             # 提供与标准库 proc_macro 兼容但更易测试的接口
quote = "1.0.45"                    # 用于将语法树转换回代码
syn = "2.0.118"                     # 用于解析 Rust 代码为语法树（AST）

[patch.crates-io]
idworker = { path = "../idworker" }
wheel-rs = { path = "../wheel-rs" }
robotech-macros = { path = "./robotech-macros" }