[workspace]
members = ["robotech-macros", "robotech"]
resolver = "3"

[workspace.dependencies]
# rototech依赖
log = "0.4.33"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-core = "0.1.36"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
thiserror = "2.0.19"
chrono = "0.4.45"
derive_setters = "0.1.9"
typed-builder = "0.23.2"
serde = "1.0.229"
serde_json = "1.0.150"
serde_with = "3.21.0"
tokio = "1.53.0"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
anyhow = "1.0.104"
config = "0.15.25"
linkme = "0.3.37"
regex = "1.13.1"
nix = "0.31.3"
axum = "0.8.9"
tower = "0.5.3"
tower-http = "0.7.0"
tokio-rustls = "0.26.4"
hyper = "1.10.1"
hyper-util = "0.1.20"
rustls = "0.23.42"
rustls-pemfile = "2.2.0" # 用于读取 pem 证书文件
socket2 = "0.6.5"
sqlx = "0.9.0"
sea-orm = "2.0.0-rc.43"
once_cell = "1.21.4"
validator = "0.20.0"
reqwest = "0.13.4"
http = "1.4.2"
ipnet = "2.12.0"
bytes = "1.12.1"
rumqttc = "0.25.1"
influxdb = "0.8.0"
jsonwebtoken = "10.4.0"

idworker = "1.1.2"
wheel-rs = "1.9.2"
robotech-macros = "1.9.0"

# macro依赖
proc-macro2 = "1.0.107"             # 提供与标准库 proc_macro 兼容但更易测试的接口
quote = "1.0.47"                    # 用于将语法树转换回代码
syn = "3.0.0"                     # 用于解析 Rust 代码为语法树（AST）

[patch.crates-io]
idworker = { path = "../idworker" }
wheel-rs = { path = "../wheel-rs" }
robotech-macros = { path = "./robotech-macros" }