[package]
name = "robotech-svr"
version = "0.1.0"
edition = "2024"
authors = ["zbz"]
keywords = ["crud", "microservice", "service", "RESTful"]
description = "Backend service implementation for the RoboTech platform, providing RESTful APIs and business logic for web applications."
categories = ["web-programming::http-server"]
license = "MIT"
homepage = "https://github.com/rusthing/robotech-rs"
repository = "https://github.com/rusthing/robotech-rs"
readme = "README.md"

[dependencies]
log = { workspace = true }
actix-web = { workspace = true }
sea-orm = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
validator = { workspace = true }
robotech-api = { workspace = true }