[package]
name = "robotech"
version = "1.5.0"
edition = "2024"
authors = ["zbz"]
keywords = ["crud", "microservice", "service", "RESTful"]
description = "Backend service implementation for the RoboTech platform, providing RESTful APIs and business logic for web applications."
categories = ["web-programming::http-server"]
license = "MIT"
homepage = "https://github.com/rusthing/robotech-rs"
repository = "https://github.com/rusthing/robotech-rs"
readme = "README.md"

[features]
api-client = ["dep:reqwest"]
app = ["dep:anyhow", "dep:config", "dep:libc", "dep:validator", "dep:wheel-rs"]
web = ["app", "dep:actix-web", "dep:actix-cors", "dep:actix-service", "dep:actix-http", "dep:socket2", "dep:rustls", "dep:reqwest"]
db = ["app", "dep:sea-orm", "dep:regex", "dep:once_cell"]

[dependencies]
log = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-core = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono", "tracing-log"] }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
utoipa = { workspace = true }
anyhow = { workspace = true, optional = true }
config = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
actix-web = { workspace = true, features = ["rustls-0_23"], optional = true }
actix-cors = { workspace = true, optional = true }
actix-service = { workspace = true, optional = true }
actix-http = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
validator = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["multipart", "json", "stream"], optional = true }

idworker = { workspace = true }
wheel-rs = { workspace = true, optional = true }

